# Materials-Manager

./: .dockerignore  .env.example  .gitattributes  .gitignore  README.md  docker-compose.yml
backend/: .dockerignore  .env.example  Dockerfile  README.md  alembic.ini  pyproject.toml
backend/app/: __init__.py  main.py  seed.py
backend/app/api/v1/: __init__.py  agent_database.py  ai_search.py  auth.py  dictionaries.py  files.py  inventory.py  purchase_materials.py  purchase_requests.py  stock_materials.py
backend/app/core/: __init__.py  config.py  database.py  errors.py  identifiers.py  logging.py  middleware.py  migrations.py  permissions.py  schema.py  security.py
backend/app/domain/: __init__.py  enums.py
backend/app/migrations/: README  env.py
backend/app/models/: __init__.py
backend/app/repositories/: __init__.py
backend/app/schemas/: __init__.py
backend/app/services/: agent_database_service.py  ai_search_service.py  common.py  dashboard_service.py  dictionary_service.py  excel_export_service.py  file_service.py  inventory_service.py  material_service.py  purchase_request_service.py  replenishment_service.py
backend/scripts/: export_openapi.py
backend/tests/: conftest.py  test_excel_export_service.py  test_file_service.py  test_identifiers.py  test_init_sql.py  test_logging.py  test_middleware.py  test_migrations.py  test_schemas.py  test_search.py
backend/tests/integration/: test_agent_database.py  test_ai_search.py  test_files.py  test_health.py  test_inventory.py  test_procurement.py  test_users.py
contracts/: openapi.yaml
(+107 files in other folders)
