[project]
name = "spare-parts-backend"
version = "0.1.0"
description = "电气车间备件管理系统后端"
requires-python = ">=3.12,<3.15"
dependencies = [
  "argon2-cffi>=23.1,<26",
  "asyncmy>=0.2.10,<1",
  "cryptography>=44,<47",
  "fastapi>=0.115,<1",
  "httpx>=0.28,<1",
  "openpyxl>=3.1.5,<4",
  "pillow>=11,<13",
  "pydantic-settings>=2.7,<3",
  "pyjwt>=2.10,<3",
  "python-multipart>=0.0.20,<1",
  "sqlalchemy[asyncio]>=2.0.36,<3",
  "uvicorn[standard]>=0.34,<1",
]

[project.optional-dependencies]
dev = [
  "aiosqlite>=0.20,<1",
  "mypy>=1.14,<2",
  "pytest>=8.3,<9",
  "pytest-asyncio>=0.25,<1",
  "pyyaml>=6.0,<7",
  "ruff>=0.9,<1",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ASYNC"]

[tool.mypy]
python_version = "3.12"
plugins = ["pydantic.mypy"]
strict = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
